--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,5 @@
-[package]
-name = "template"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = ["rcli"]
+resolver = "2" # 暂时不理解
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
